objects/Business_Consulting__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Business Consulting</relationshipLabel>
        <relationshipName>Business_Consulting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_1_Name__c</fullName>
        <label>Contact 1 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Consulting</relationshipLabel>
        <relationshipName>Business_Consulting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_2_Name__c</fullName>
        <label>Contact 2 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Consulting (Contact 2)</relationshipLabel>
        <relationshipName>Business_Consulting1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_3_Name__c</fullName>
        <label>Contact 3 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Consulting (Contact 3)</relationshipLabel>
        <relationshipName>Business_Consulting2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email_1__c</fullName>
        <label>Contact Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_2__c</fullName>
        <label>Contact Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_3__c</fullName>
        <label>Contact Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Formula_5__c</fullName>
        <formula>if(Contact_5__r.Email == &apos;&apos;,Contact_Email_5__c,Contact_5__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email Formula 5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Formula_1__c</fullName>
        <formula>if(Contact_1__r.Email == &apos;&apos;,Contact_Email_1__c,Contact_1__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Formula 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Formula_2__c</fullName>
        <formula>if(Contact_2__r.Email == &apos;&apos;,Contact_Email_2__c,Contact_2__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Formula 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Formula_3__c</fullName>
        <formula>if(Contact_3__r.Email == &apos;&apos;,Contact_Email_3__c,Contact_3__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Formula 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Formula_Name_1__c</fullName>
        <formula>if(Contact_1__r.LastName == &apos;&apos; , Contact_1_Name__c, Contact_1__r.FirstName + &apos; &apos; + Contact_1__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Formula Name 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Formula_Name_2__c</fullName>
        <formula>if(Contact_2__r.LastName == &apos;&apos; , Contact_2_Name__c, Contact_2__r.FirstName + &apos; &apos; + Contact_2__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Formula Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Formula_Name_3__c</fullName>
        <formula>if(Contact_3__r.LastName == &apos;&apos; , Contact_3_Name__c, Contact_3__r.FirstName + &apos; &apos; + Contact_3__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Formula Name 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Consulting</relationshipLabel>
        <relationshipName>Business_Consulting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Consulting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                    <default>true</default>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Consulting1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Consulting (Sold to Account)</relationshipLabel>
        <relationshipName>Business_Consulting1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Business Consulting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Consulting Assessment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Consulting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BC</fullName>
        <active>true</active>
        <errorConditionFormula>if(Contact_1__r.Id == &apos;&apos; &amp;&amp;  Contact_Email_1__c == &apos;&apos;,true,false)</errorConditionFormula>
        <errorMessage>Please select first contact.</errorMessage>
    </validationRules>
</CustomObject>